# deepin-compressor

./: .gitignore  .project.json  CMakeLists.txt  README.md  README.zh_CN.md  compressor.pro  deepin-compressor.pro  install.sh  linglong.yaml  main.cpp  updateTranslation.sh
deepin-compressor/: CMakeLists.txt  DebugTimeManager.cpp  DebugTimeManager.h  accessible.h  config.h.in  config.qrc  deepin-compress-multi.desktop  deepin-compress-to_7z.desktop  deepin-compress-to_zip.desktop  deepin-compress.desktop  deepin-compressor  deepin-compressor.desktop  deepin-compressor.pro  deepin-compressor.qrc  deepin-decompress-multi.desktop  deepin-decompress-split.desktop  deepin-decompress-split_multi.desktop  deepin-decompress.desktop  deepin-decompress_split.desktop  deepin-decompresshere-multi.desktop  deepin-decompresshere-split.desktop  deepin-decompresshere-split_multi.desktop  deepin-decompresshere.desktop  deepin-decompresshere_split.desktop  deepin-decompressmkdir-split.desktop  main.cpp
deepin-compressor/assets/data/: deepin-compressor.json
deepin-compressor/data/: deepin-compressor.json
deepin-compressor/interface/: CMakeLists.txt  TSMutex.cpp  TSMutex.h  TSSingleton.h  analysepsdtool.cpp  analysepsdtool.h  archive_manager.cpp  archive_manager.h  archiveentry.cpp  archiveentry.h  archiveformat.cpp  archiveformat.h  archiveinterface.cpp  archiveinterface.h  archivejob.cpp  archivejob.h  archivejob_p.h  archiverunnable.cpp  archiverunnable.h  batchjobs.cpp  batchjobs.h  cliinterface.cpp  cliinterface.h  cliproperties.cpp  cliproperties.h  customdatainfo.h  desktopfileparser.cpp  desktopfileparser_p.h  extractlinesanalyze.h  extractres.h  filewatcher.cpp  filewatcher.h  globalarchivemanager.cpp  globalarchivemanager.h  jobs.cpp  jobs.h  kcoreaddons_export.h  kexportplugin.h  kpluginfactory.cpp  kpluginfactory.h  (+23 more)
deepin-compressor/source/inc/: archivemodel.h  archivesortfiltermodel.h  batchcompress.h  batchextract.h  com.archive.mainwindow.monitor.xml  compressor_fail.h  compressor_success.h  compressorapplication.h  compresspage.h  compresssetting.h  customwidget.h  ddesktopservicesthread.h  encodingpage.h  encryptionpage.h  extractpausedialog.h  fileViewer.h  homepage.h  lib_edit_button.h  logviewheaderview.h  logwidget.h  logwidgetappender.h  mainwindow.h  mimetypedisplaymanager.h  monitorAdaptor.h  monitorInterface.h  myfileitem.h  myfilesystemmodel.h  openloadingpage.h  popupdialog.h  progress.h  progressdialog.h  settingdialog.h  uncompresspage.h  utils.h
deepin-compressor/source/src/: archivemodel.cpp  archivesortfiltermodel.cpp  batchcompress.cpp  batchextract.cpp  compressor_fail.cpp  compressor_success.cpp  compressorapplication.cpp  compresspage.cpp  compresssetting.cpp  customwidget.cpp  ddesktopservicesthread.cpp  encodingpage.cpp  encryptionpage.cpp  extractpausedialog.cpp  fileViewer.cpp  homepage.cpp  lib_edit_button.cpp  logviewheaderview.cpp  logwidget.cpp  logwidgetappender.cpp  mainwindow.cpp  mimetypedisplaymanager.cpp  monitorAdaptor.cpp  monitorInterface.cpp  myfileitem.cpp  myfilesystemmodel.cpp  openloadingpage.cpp  popupdialog.cpp  progress.cpp  progressdialog.cpp  settingdialog.cpp  settings_translation.cpp  uncompresspage.cpp  utils.cpp
deepin-compressor/translations/: deepin-compressor.qm  deepin-compressor.ts  deepin-compressor_ar.qm  deepin-compressor_ar.ts  deepin-compressor_ca.qm  deepin-compressor_ca.ts  deepin-compressor_cs.qm  deepin-compressor_cs.ts  deepin-compressor_da.qm  deepin-compressor_da.ts  deepin-compressor_de.qm  deepin-compressor_de.ts  deepin-compressor_en.qm  deepin-compressor_en.ts  deepin-compressor_en_GB.qm  deepin-compressor_en_GB.ts  deepin-compressor_es.qm  deepin-compressor_es.ts  deepin-compressor_fi.qm  deepin-compressor_fi.ts  deepin-compressor_fr.qm  deepin-compressor_fr.ts  deepin-compressor_it.qm  deepin-compressor_it.ts  deepin-compressor_ko.qm  deepin-compressor_ko.ts  deepin-compressor_ms.qm  deepin-compressor_ms.ts  deepin-compressor_nl.qm  deepin-compressor_nl.ts  deepin-compressor_pl.qm  deepin-compressor_pl.ts  deepin-compressor_pt.qm  deepin-compressor_pt.ts  deepin-compressor_pt_BR.qm  deepin-compressor_pt_BR.ts  deepin-compressor_ru.qm  deepin-compressor_ru.ts  deepin-compressor_sq.qm  deepin-compressor_sq.ts  (+56 more)
deepin-compressor/translations(副本)/: deepin-compressor_en.qm  deepin-compressor_en.ts  deepin-compressor_zh_CN.qm  deepin-compressor_zh_CN.ts
deepin-compressor/translations/desktop/: desktop_ar.ts  desktop_ast.ts  desktop_ca.ts  desktop_da.ts  desktop_en.ts  desktop_es_419.ts  desktop_fi.ts  desktop_fr.ts  desktop_hr.ts  desktop_hu.ts  desktop_id.ts  desktop_it.ts  desktop_ja.ts  desktop_ko.ts  desktop_lt.ts  desktop_nl.ts  desktop_pt.ts  desktop_pt_BR.ts  desktop_sq.ts  desktop_sr.ts  desktop_ug.ts  desktop_uk.ts
src/: CMakeLists.txt  com.deepin.Compressor.service  com.deepin.Compressor.xml  config.h.in  deepin-compressor.qrc  environments.h.in  main.cpp  translate_generation.sh
src/assets/: org.deepin.compressor.method.json
src/conf/: compressor-7zsplitemulticompress.conf  compressor-CompressedFormat.conf  compressor-multicompress.conf  compressor-multiextract.conf  compressor-singlecompress.conf  compressor-singleextract.conf
src/desktop/: deepin-compress-multi.desktop  deepin-compress-multisplite7z.desktop  deepin-compress-to_7z.desktop  deepin-compress-to_zip.desktop  deepin-compress.desktop  deepin-compressor.desktop  deepin-decompress-multi.desktop  deepin-decompress-split.desktop  deepin-decompress-split_multi.desktop  deepin-decompresshere-multi.desktop  deepin-decompresshere-split.desktop  deepin-decompresshere-split_multi.desktop  deepin-decompresshere.desktop  deepin-decompressmkdir.desktop
src/pzip/: CMakeLists.txt
src/pzip/cmd/: pzip_main.cpp
src/source/: DebugTimeManager.cpp  DebugTimeManager.h  compressorapplication.cpp  compressorapplication.h  mainwindow.cpp  mainwindow.h
test/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
test/UnitTest/: CMakeLists.txt
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/UnitTest/: CMakeLists.txt
(+720 files in other folders)
